[package]
name = "kalast"
version = "0.5.11"
authors = ["Grégoire Henry <gregoire.henry@oma.be>"]
edition = "2021"
description = "Thermophysical Model for Binary Asteroids"
license = "Apache-2.0"
repository = "https://github.com/GregoireHENRY/kalast"
keywords = ["thermophysical", "model", "binary", "asteroid", "space"]
categories = ["algorithms", "science"]

[lib]
name = "kalast"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["spice"]
python = []
spice = ["rust-spice"]

[dependencies]
# Core
itertools = "0.13"
snafu = "0.8"
strum = { version = "0.26", features = ["derive"] }
float_eq = "1.0"

# I/O
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
figment = { version = "0.10", features = ["yaml", "toml", "env", "json"] }
polars = { version = "0.37", features = [] }
tobj = { version = "4.0", features = ["ahash", "use_f64"] }

# Log
log = "0.4"
simplelog = "0.12"

# Terminal
indicatif = "0.17"
console = "0.15"
color-eyre = "0.6"

# Maths / algebra
nalgebra = { version = "0.33", features = ["serde-serialize"] }
nalgebra-glm = "0.19"
uom = "0.36"

# Features ++
reqwest = { version = "0.12", features = ["blocking", "json"] }
chrono = "0.4.38"
notify-rust = "4"
directories = "5.0"
fs_extra = "1.3"
regex = "1.10"
downcast-rs = "1.2"
dyn-clone = "1.0"
semver = "1.0"
compile-time = "0.2"
lazy_static = "1.0"
dunce = "1.0"

# GUI / GPU
gl = "0.14"
sdl2 = "0.37"
stb_image = "0.3"
image = "0.25"
egui_sdl2_gl = "0.27"

# Kalast specials
rust-spice = { version = "0.7", features = ["download"], optional = true }
kalast_macros = { path = "macros", version = "0.4.0-beta" }


[dev-dependencies]
rstest = "0.21"
serial_test = "3.0"

[profile.release]
lto = "fat"
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
