[project]
name = "kalast"
version = "0.1.0"
description = "TPM for binary asteroids"
readme = "README.rst"
requires-python = ">=3.14.3,<3.15"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
	"matplotlib>=3.10",
    "numpy>=2.5",
    "pandas>=3",
    "pyarrow>=24",
    "scipy>=1.16",
    "spiceypy>=8",
    "symfit>=0.5",
]

[dependency-groups]
dev = [
    "ipython>=9.10",
    "maturin>=1.8",
    "mypy>=2",
    "ptpython>=3.0",
    "pygments>=2.19",
    "ruff>=0.12",
]

[tool.maturin]
module-name = "kalast._rs"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"